# goodfood

./: .env.docker.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: admin.yml  cicd.yml  user-management.yml
apps/: README.md
apps/mobile/: .editorconfig  app.json  package-lock.json  package.json
apps/web/: package-lock.json  package.json  tailwind.config.ts
kubernetes/: README.md
kubernetes/admin/: admin.yml  deployment.yml  service.yml
kubernetes/order/: order.yml
kubernetes/product/: product.yml
kubernetes/rabbitmq/: deployment.yml  rabbitmq.yaml  service.yml
kubernetes/user/: user.yml
kubernetes/user-management/: deployment.yml  user.yml
services/: README.md
services/admin/: Dockerfile  package-lock.json  package.json
services/api-gateway/: README.md  docker-compose.yml  env.docker
services/carts/: package-lock.json  package.json
services/deliveries/: .env.example  package-lock.json  package.json
services/gateway/: Dockerfile  nginx.conf
services/notifications/: package-lock.json
services/orders/: .env.example  Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
services/product/: Dockerfile  Makefile  pom.xml
services/products/: Dockerfile  Makefile  build.gradle
services/reporting/: Cargo.toml  Dockerfile
services/reporting/src/: main.rs
services/reporting/tests/: quick-dev.rs
services/user/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  (+2 more)
services/user-management/: Dockerfile  package-lock.json  package.json
terraform/: main.tf
(+107 files in other folders)
