[package]
name = "reporting"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http ={ version = "0.4", features = ["fs"] }
tower-cookies = "0.9"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
